<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/column_layout">

        <TextView
            android:text="@string/id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id"
            android:layout_weight="1" />

        <TextView
            android:text="@string/variete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/variete"
            android:layout_weight="1" />

        <TextView
            android:text="@string/superficie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/superficie"
            android:layout_weight="1" />

        <TextView
            android:text="@string/localisation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/localisation"
            android:layout_weight="1" />

        <TextView
            android:text="@string/nb_arbres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nb_arbres"
            android:layout_weight="1" />
    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/viewVerger"
        android:layout_below="@+id/column_layout" />

</RelativeLayout>