<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_homepage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="agrur.agrurcollect.Homepage">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:id="@+id/contentHomepage">

        <TextView
            android:text="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/appNameAC"
            android:textAlignment="center"
            android:fontFamily="sans-serif"
            android:textSize="36sp"
            android:textStyle="bold"
            android:textAllCaps="false" />

    </FrameLayout>

    <Button
        android:text="@string/add_verger"
        android:id="@+id/btt_add_verger"
        android:layout_marginTop="98dp"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        style="@android:style/Widget.Material.Light.Button.Toggle" />

    <Button
        android:text="@string/show_verger"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:layout_marginTop="94dp"
        android:id="@+id/btt_showVergers"
        android:layout_below="@+id/btt_add_verger"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        style="@android:style/Widget.Material.Light.Button.Toggle" />

</RelativeLayout>
